# tm

./: .gitignore  Cargo.toml  README.md
crates/tm-core/: Cargo.toml
crates/tm-core/src/: actions.rs  ex.rs  keymap.rs  lib.rs
crates/tm-gui/: Cargo.toml
crates/tm-gui/src/: lib.rs
crates/tm-plugin-host/: Cargo.toml
crates/tm-plugin-host/src/: lib.rs
crates/tm-ui/: Cargo.toml
crates/tm-ui/src/: lib.rs
docs/: ADR_TEMPLATE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_NOTES.md  GUARDRAILS.md  KEY_NOTES.md  README.md  REVISIT_LATER.md  ROADMAP.md  SETUP.md  STARTER_PROMPT.md  TESTING.md  continuation_script.md  project.md
tm/: Cargo.toml
tm/src/: main.rs
